# mrquery-rs

./: Cargo.toml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
crates/mrq-cli/: Cargo.toml
crates/mrq-cli/src/: main.rs
crates/mrq-cli/src/commands/: index.rs  inspect.rs  mod.rs  query.rs  snapshot.rs
crates/mrq-core/: Cargo.toml
crates/mrq-core/src/: color.rs  config.rs  edge.rs  error.rs  hash.rs  image_norm.rs  lib.rs  score.rs  signature.rs  wavelet.rs
crates/mrq-eval/: Cargo.toml
crates/mrq-eval/src/: metrics.rs
crates/mrq-ffi/: Cargo.toml
crates/mrq-ffi/src/: lib.rs
crates/mrq-index/: Cargo.toml
crates/mrq-index/src/: lib.rs  postings.rs  reader.rs  snapshot.rs  store.rs  types.rs  writer.rs
crates/mrq-query/: Cargo.toml
crates/mrq-query/src/: candidate.rs  engine.rs  explain.rs  lib.rs  rank.rs
crates/mrq-tests/: Cargo.toml
crates/mrq-tests/src/: lib.rs
crates/mrq-tests/tests/: integration_test.rs
crates/mrq-worker/: Cargo.toml
crates/mrq-worker/src/: commands.rs  jsonl.rs  main.rs  protocol.rs
docs/: design.md
