[workspace]
members = [
    "crates/mrq-core",
    "crates/mrq-index",
    "crates/mrq-query",
    "crates/mrq-worker",
    "crates/mrq-cli",
    "crates/mrq-eval",
    "crates/mrq-ffi",
    "crates/mrq-tests",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
image = "0.25"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
hex = "0.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
