[package]
name = "mrq-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
image.workspace = true
serde = { workspace = true }
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
