[package]
name = "mrq-eval"
version.workspace = true
edition.workspace = true

[dependencies]
mrq-core = { path = "../mrq-core" }
mrq-index = { path = "../mrq-index" }
mrq-query = { path = "../mrq-query" }
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
