[package]
name = "mrq-index"
version.workspace = true
edition.workspace = true

[dependencies]
mrq-core = { path = "../mrq-core" }
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
tempfile.workspace = true
walkdir.workspace = true
